# zk-test

./: .gitignore
zk-ark/: Cargo.toml
zk-ark/src/: main.rs
zk-bellman/: Cargo.toml
zk-bellman/src/: main.rs
zk-bellman/test/: proof.json  public.json
